--- a/tetris/20170918.html
+++ b/tetris/20170918.html
@@ -71,6 +71,12 @@
 			}
 
 		</style>
+
+		<style>
+			li.on {
+				background: aqua;
+			}
+		</style>
 	</head>
 	<body>
 
@@ -83,14 +89,15 @@
 		    <ul><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li></ul>
 		    <ul><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li></ul>
 		    <ul><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li></ul>
-		    <ul><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li></ul>
+		    <ul><li class="on"></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li></ul>
 		  </div>
 		</div>
 
 
 		<script src="underscore-min.js"></script>
 		<script>
-
+			// setTimeInterval
+			// http://underscorejs.org/#times
 
 		</script>
 	</body>
