--- a/tetris/20170919.html
+++ b/tetris/20170919.html
@@ -66,7 +66,7 @@
 			}
 		</style>
 	</head>
-	<body onload="changeColor()">
+	<body onload="">
 
 		<div class="square">
 		  <div class="content">
@@ -77,26 +77,41 @@
 		    <ul><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li></ul>
 		    <ul><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li></ul>
 		    <ul><li></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li></ul>
-		    <ul><li class="on" id="my_box"></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li></ul>
+		    <ul><li class="on"></li><li></li><li></li><li></li><li></li><li></li><li></li><li></li></ul>
 		  </div>
 		</div>
 
 
 		<script>
-var nIntervId;
 
-function changeColor() {
-nIntervId = setInterval(flashText, 1000);
-}
+			function onCell (cell) {
+				cell.className = 'on';
+			}
+			function offCell (cell) {
+				cell.className = '';
+			}
+			function getCell (row, column) {
+				var row = document.getElementsByTagName('ul')[row];
+				var column = row.getElementsByTagName('li')[column];
+				return column;
+			}
 
-function flashText() {
-var oElem = document.getElementById('my_box');
-oElem.style.background = oElem.style.background == 'red' ? 'blue' : 'red';
-}
 
-function stopTextColor() {
-clearInterval(nIntervId);
-}
+
+// var nIntervId;
+
+// function changeColor() {
+// nIntervId = setInterval(flashText, 1000);
+// }
+
+// function flashText() {
+// var oElem = document.getElementById('my_box');
+// oElem.style.background = oElem.style.background == 'red' ? 'blue' : 'red';
+// }
+
+// function stopTextColor() {
+// clearInterval(nIntervId);
+// }
 		  </script>
 
 		  <script>
