add some thoughts

--- a/tetris/20170919.html
+++ b/tetris/20170919.html
@@ -113,7 +113,31 @@
 
 
 			// left up point
-			var leftTopPoint = []; 
+			var leftTopPoint = [];
+
+
+
+			// key press event
+			// maybe need underscore.js _.debounce() or _.throttle()
+
+
+			// direction according to key press
+			// up down left right
+			// default down
+
+
+
+			// figure out the next step
+			// i.e. array of cells to be painted
+
+
+
+			// test if the next step cells array will be valid
+			// if some other painted cells obstable the way we going
+
+
+			//
+
 
 			// window.onload = function()
 		 //    {
