just 1 cell turn left or right

--- a/tetris/20170920.html
+++ b/tetris/20170920.html
@@ -101,25 +101,25 @@
 
 
 			// shapes array
-			var shapes = [{
-				'up': [[0,0], [1,0], [2,0], [2,1], [2,2]], // L
-				'right': [[0,0], [1,0], [2,0], [2,1], [2,2]],
-			},{
-				'up': [[0,0], [1,0], [2,0], [2,1], [2,2]], // L
-				'right': [[0,0], [1,0], [2,0], [2,1], [2,2]],
-			},
+			// var shapes = [{
+			// 	'up': [[0,0], [1,0], [2,0], [2,1], [2,2]], // L
+			// 	'right': [[0,0], [1,0], [2,0], [2,1], [2,2]],
+			// },{
+			// 	'up': [[0,0], [1,0], [2,0], [2,1], [2,2]], // L
+			// 	'right': [[0,0], [1,0], [2,0], [2,1], [2,2]],
+			// },
 
-			];
+			// ];
 
 
 			// left up point
-			var leftTopPoint = [];
+			// var leftTopPoint = [];
 
 
 
 			// key press event
 			// maybe need underscore.js _.debounce() or _.throttle()
-
+			// https://css-tricks.com/debouncing-throttling-explained-examples/
 
 			// direction according to key press
 			// up down left right
