--- a/tetris/20170920.html
+++ b/tetris/20170920.html
@@ -112,6 +112,15 @@
 			// ];
 
 
+			// positioning system
+			// 0__________x
+			// |
+			// |
+			// |
+			// |y
+
+
+
 			// left up point
 			// var leftTopPoint = [];
 
@@ -120,6 +129,8 @@
 			// key press event
 			// maybe need underscore.js _.debounce() or _.throttle()
 			// https://css-tricks.com/debouncing-throttling-explained-examples/
+
+
 
 			// direction according to key press
 			// up down left right
