--- a/tetris/20170920.html
+++ b/tetris/20170920.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>2017-09-19</title>
+		<title>2017-09-20</title>
 
 		<style>
 			* {
@@ -66,7 +66,7 @@
 			}
 		</style>
 	</head>
-	<body onload="">
+	<body>
 
 		<div class="square">
 		  <div class="content">
@@ -83,22 +83,44 @@
 
 
 		<script>
+
+			var ULS =document.getElementsByTagName('ul');
+			var LENGTH = ULS.length;
+
 			// cell is from getCell()
-			function onCell (cell) {
-				cell.className = 'on';
-			}
+			// function onCell (cell) {
+			// 	cell.className = 'on';
+			// }
 			// cell is from getCell()
-			function offCell (cell) {
-				cell.className = '';
-			}
+			// function offCell (cell) {
+			// 	cell.className = '';
+			// }
 			// do not forget to check boundary
-			function getCell (row, column) {
-				var row = document.getElementsByTagName('ul')[row];
-				var column = row.getElementsByTagName('li')[column];
+			//
+			// function getCell (row, column) {
+			// 	var row = document.getElementsByTagName('ul')[row];
+			// 	var column = row.getElementsByTagName('li')[column];
+			// 	return column;
+			// }
+			// array p[x, y]
+			// x 0~7
+			// y 0~7 corresponding to getElementsByTagName array index
+			function getCell (p) {
+				var row = ULS[p['1']];
+				var column = row.getElementsByTagName('li')[p['0']];
 				return column;
 			}
-
-
+			function onCell (p) {
+				var cell = getCell(p);
+				cell.className = 'on';
+			}
+			function offCell (p) {
+				var cell = getCell(p);
+				cell.className = '';
+			}
+			function testBoundary() {
+				if ( > LENGTH) {}
+			}
 
 			// shapes array
 			// var shapes = [{
@@ -129,7 +151,52 @@
 			// key press event
 			// maybe need underscore.js _.debounce() or _.throttle()
 			// https://css-tricks.com/debouncing-throttling-explained-examples/
+			window.addEventListener('load', function () {
+				console.log("onload");
 
+
+				var cell = [3, -1];
+				var nextCell = [3, 0];
+
+
+				var timer = setInterval(function () {
+					mainLoop();
+				}, 1000);
+
+				var mainLoop = function () {
+					console.log("mainLoop...");
+
+					offCell(cell);
+					onCell(nextCell);
+
+
+				};
+
+
+				document.body.addEventListener('keydown',function (event) {
+					console.log(event);
+
+
+					// keydown { target: <body>, key: "ArrowUp", charCode: 0, keyCode: 38 }
+					// keydown { target: <body>, key: "ArrowDown", charCode: 0, keyCode: 40 }
+					// keydown { target: <body>, key: "ArrowLeft", charCode: 0, keyCode: 37 }
+					// keydown { target: <body>, key: "ArrowRight", charCode: 0, keyCode: 39 }
+					// keydown { target: <body>, key: " ", charCode: 0, keyCode: 32 }
+					switch(event.keyCode){
+						case 32:
+							console.log("Press Space to pause");
+							clearInterval(timer);
+						break;
+						default:
+						break;
+					}
+				})
+			});
+
+			// body.onkeydown = kdhandler;
+			// function kdhandler(e) {
+			// 	console.log(e);
+			// }
 
 
 			// direction according to key press
